--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,18 +7,47 @@ spring.application.name=MySpringBootProject
 # ===============================
 # Database Configuration (Local - SQL Server)
 # ===============================
-spring.datasource.url=jdbc:mysql://localhost:3306/MySpringBootProject
+#spring.datasource.username=root
+#spring.datasource.password=empover#1
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+#spring.datasource.hikari.connection-timeout=30000
+
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=false
+#spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+#spring.jpa.hibernate.ddl-auto=create  # or update (only use 'create' for testing; it drops and recreates tables)
+
+
+
+# ================================
+# RAILWAY MYSQL CONNECTION
+# ================================
+
+#spring.datasource.url=jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}?useSSL=false&allowPublicKeyRetrieval=true
+#spring.datasource.username=${DB_USER}
+#spring.datasource.password=${DB_PASSWORD}
+spring.datasource.url=jdbc:mysql://mainline.proxy.rlwy.net:17230/railway?useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
-spring.datasource.password=empover#1
+spring.datasource.password=YLiAGGDdLuPCIRUFVGUNaHUebyTEPRLR
+
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.datasource.hikari.connection-timeout=30000
+
+# ================================
+# JPA & HIBERNATE
+# ================================
 
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=false
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+# Optional tuning
+spring.datasource.hikari.connection-timeout=30000
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-#spring.jpa.hibernate.ddl-auto=create  # or update (only use 'create' for testing; it drops and recreates tables)
+
 
 
 # ===============================
